--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
 [build]
   command = "npm run build"
   publish = "build"
+
+# Specify build environment for Python dependencies
+[build.environment]
+  PYTHON_VERSION = "3.8.13"  # Replace with your desired Python version
+
+# Install Python dependencies
+[build]
+  command = "npm run build && pip install -r requirements.txt"
+  publish = "build"
